Code cleanup & bugfixes